--- a/_modules/index.html
+++ b/_modules/index.html
@@ -253,8 +253,9 @@
             
   <h1 id="modules-index--page-root">All modules for which code is available</h1>
 <ul><li><a href="scripts/engine/core/chronicle.html">scripts.engine.core.chronicle</a></li>
+<li><a href="scripts/engine/core/component.html">scripts.engine.core.component</a></li>
 <li><a href="scripts/engine/core/dungen.html">scripts.engine.core.dungen</a></li>
-<li><a href="scripts/engine/core/event.html">scripts.engine.core.event</a></li>
+<li><a href="scripts/engine/core/effect.html">scripts.engine.core.effect</a></li>
 <li><a href="scripts/engine/core/key.html">scripts.engine.core.key</a></li>
 <li><a href="scripts/engine/core/state.html">scripts.engine.core.state</a></li>
 <li><a href="scripts/engine/core/system.html">scripts.engine.core.system</a></li>
@@ -262,12 +263,11 @@
 <li><a href="scripts/engine/core/utility.html">scripts.engine.core.utility</a></li>
 <li><a href="scripts/engine/core/world.html">scripts.engine.core.world</a></li>
 <li><a href="scripts/engine/internal/action.html">scripts.engine.internal.action</a></li>
-<li><a href="scripts/engine/internal/component.html">scripts.engine.internal.component</a></li>
 <li><a href="scripts/engine/internal/constant.html">scripts.engine.internal.constant</a></li>
 <li><a href="scripts/engine/internal/data.html">scripts.engine.internal.data</a></li>
 <li><a href="scripts/engine/internal/debug.html">scripts.engine.internal.debug</a></li>
 <li><a href="scripts/engine/internal/definition.html">scripts.engine.internal.definition</a></li>
-<li><a href="scripts/engine/internal/effect.html">scripts.engine.internal.effect</a></li>
+<li><a href="scripts/engine/internal/event.html">scripts.engine.internal.event</a></li>
 <li><a href="scripts/engine/internal/extend_json.html">scripts.engine.internal.extend_json</a></li>
 <li><a href="scripts/engine/internal/library.html">scripts.engine.internal.library</a></li>
 <li><a href="scripts/engine/widgets/panel.html">scripts.engine.widgets.panel</a></li>
