--- a/_modules/scripts/engine/internal/constant.html
+++ b/_modules/scripts/engine/internal/constant.html
@@ -266,7 +266,7 @@
 
 <span class="c1">######################## TOP LEVEL CONSTANTS ######################################</span>
 
-<span class="n">VERSION</span> <span class="o">=</span> <span class="s2">"0.142.0"</span>  <span class="c1"># DONT FORGET TO UPDATE SPHINX VERSION</span>
+<span class="n">VERSION</span> <span class="o">=</span> <span class="s2">"0.144.0"</span>  <span class="c1"># DONT FORGET TO UPDATE SPHINX VERSION</span>
 <span class="n">DEBUG_START</span> <span class="o">=</span> <span class="kc">False</span>  <span class="c1"># Whether to start directly in debug map</span>
 
 <span class="n">MAX_SKILLS</span> <span class="o">=</span> <span class="mi">6</span>
@@ -355,7 +355,8 @@
     <span class="n">NEW_TURN</span> <span class="o">=</span> <span class="n">auto</span><span class="p">()</span>
     <span class="n">END_TURN</span> <span class="o">=</span> <span class="n">auto</span><span class="p">()</span>
     <span class="n">NEW_ROUND</span> <span class="o">=</span> <span class="n">auto</span><span class="p">()</span>
-    <span class="n">END_ROUND</span> <span class="o">=</span> <span class="n">auto</span><span class="p">()</span></div>
+    <span class="n">END_ROUND</span> <span class="o">=</span> <span class="n">auto</span><span class="p">()</span>
+    <span class="n">MESSAGE</span> <span class="o">=</span> <span class="n">auto</span><span class="p">()</span></div>
 
 
 <div class="viewcode-block" id="InteractionEventType"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.constant.InteractionEventType">[docs]</a><span class="k">class</span> <span class="nc">InteractionEventType</span><span class="p">(</span><span class="n">IntEnum</span><span class="p">):</span>
