--- a/_modules/scripts/engine/internal/definition.html
+++ b/_modules/scripts/engine/internal/definition.html
@@ -297,8 +297,8 @@
     <span class="kn">import</span> <span class="nn">pygame</span>
     <span class="kn">from</span> <span class="nn">snecs.typedefs</span> <span class="kn">import</span> <span class="n">EntityID</span>
 
+    <span class="kn">from</span> <span class="nn">scripts.engine.core.effect</span> <span class="kn">import</span> <span class="n">Effect</span>
     <span class="kn">from</span> <span class="nn">scripts.engine.internal.action</span> <span class="kn">import</span> <span class="n">Skill</span>
-    <span class="kn">from</span> <span class="nn">scripts.engine.internal.effect</span> <span class="kn">import</span> <span class="n">Effect</span>
 
 
 <span class="c1">#################################################################</span>
