--- a/_modules/scripts/nqp/ui_elements/title_screen.html
+++ b/_modules/scripts/nqp/ui_elements/title_screen.html
@@ -263,8 +263,8 @@
 <span class="kn">from</span> <span class="nn">pygame</span> <span class="kn">import</span> <span class="n">Rect</span>
 <span class="kn">from</span> <span class="nn">pygame_gui.elements</span> <span class="kn">import</span> <span class="n">UIButton</span>
 
-<span class="kn">from</span> <span class="nn">scripts.engine.core.event</span> <span class="kn">import</span> <span class="n">event_hub</span><span class="p">,</span> <span class="n">ExitGameEvent</span><span class="p">,</span> <span class="n">LoadGameEvent</span><span class="p">,</span> <span class="n">NewGameEvent</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.constant</span> <span class="kn">import</span> <span class="n">RenderLayer</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.internal.event</span> <span class="kn">import</span> <span class="n">event_hub</span><span class="p">,</span> <span class="n">ExitGameEvent</span><span class="p">,</span> <span class="n">LoadGameEvent</span><span class="p">,</span> <span class="n">NewGameEvent</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.widgets.panel</span> <span class="kn">import</span> <span class="n">Panel</span>
 
 <span class="k">if</span> <span class="n">TYPE_CHECKING</span><span class="p">:</span>
