--- a/_modules/scripts/engine/core/chronicle.html
+++ b/_modules/scripts/engine/core/chronicle.html
@@ -261,10 +261,10 @@
 <span class="kn">from</span> <span class="nn">snecs.typedefs</span> <span class="kn">import</span> <span class="n">EntityID</span>
 
 <span class="kn">from</span> <span class="nn">scripts.engine.core</span> <span class="kn">import</span> <span class="n">query</span><span class="p">,</span> <span class="n">world</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.core.event</span> <span class="kn">import</span> <span class="n">EndRoundEvent</span><span class="p">,</span> <span class="n">EndTurnEvent</span><span class="p">,</span> <span class="n">event_hub</span><span class="p">,</span> <span class="n">NewRoundEvent</span><span class="p">,</span> <span class="n">NewTurnEvent</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.core.component</span> <span class="kn">import</span> <span class="n">Tracked</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal</span> <span class="kn">import</span> <span class="n">library</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.internal.component</span> <span class="kn">import</span> <span class="n">Tracked</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.data</span> <span class="kn">import</span> <span class="n">store</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.internal.event</span> <span class="kn">import</span> <span class="n">EndRoundEvent</span><span class="p">,</span> <span class="n">EndTurnEvent</span><span class="p">,</span> <span class="n">event_hub</span><span class="p">,</span> <span class="n">NewRoundEvent</span><span class="p">,</span> <span class="n">NewTurnEvent</span>
 
 <span class="k">if</span> <span class="n">TYPE_CHECKING</span><span class="p">:</span>
     <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Dict</span><span class="p">,</span> <span class="n">List</span><span class="p">,</span> <span class="n">Optional</span><span class="p">,</span> <span class="n">Tuple</span>
