--- a/_modules/scripts/nqp/main.html
+++ b/_modules/scripts/nqp/main.html
@@ -265,12 +265,12 @@
 
 <span class="kn">import</span> <span class="nn">scripts.nqp.processors.input</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.core</span> <span class="kn">import</span> <span class="n">chronicle</span><span class="p">,</span> <span class="n">state</span><span class="p">,</span> <span class="n">world</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.core.event</span> <span class="kn">import</span> <span class="n">event_hub</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.core.component</span> <span class="kn">import</span> <span class="n">NQPComponent</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.core.ui</span> <span class="kn">import</span> <span class="n">ui</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal</span> <span class="kn">import</span> <span class="n">debug</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.internal.component</span> <span class="kn">import</span> <span class="n">NQPComponent</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.constant</span> <span class="kn">import</span> <span class="n">GameState</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.debug</span> <span class="kn">import</span> <span class="n">enable_profiling</span><span class="p">,</span> <span class="n">initialise_logging</span><span class="p">,</span> <span class="n">kill_logging</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.internal.event</span> <span class="kn">import</span> <span class="n">event_hub</span>
 <span class="kn">from</span> <span class="nn">scripts.nqp</span> <span class="kn">import</span> <span class="n">processors</span>
 <span class="kn">from</span> <span class="nn">scripts.nqp.command</span> <span class="kn">import</span> <span class="n">initialise_game</span>
 <span class="kn">from</span> <span class="nn">scripts.nqp.processors</span> <span class="kn">import</span> <span class="n">display</span>
@@ -281,6 +281,9 @@
     <span class="sd">"""</span>
 <span class="sd">    The entry for the game initialisation and game loop</span>
 <span class="sd">    """</span>
+    <span class="c1"># init engine resources</span>
+    <span class="n">state</span><span class="o">.</span><span class="n">initialise_engine</span><span class="p">()</span>
+
     <span class="c1"># initialise logging</span>
     <span class="k">if</span> <span class="n">debug</span><span class="o">.</span><span class="n">is_logging</span><span class="p">():</span>
         <span class="n">initialise_logging</span><span class="p">()</span>
