--- a/_modules/scripts/nqp/ui_elements/actor_info.html
+++ b/_modules/scripts/nqp/ui_elements/actor_info.html
@@ -264,9 +264,8 @@
 <span class="kn">from</span> <span class="nn">snecs.typedefs</span> <span class="kn">import</span> <span class="n">EntityID</span>
 
 <span class="kn">from</span> <span class="nn">scripts.engine.core</span> <span class="kn">import</span> <span class="n">utility</span><span class="p">,</span> <span class="n">world</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.core.event</span> <span class="kn">import</span> <span class="n">event_hub</span><span class="p">,</span> <span class="n">ExitMenuEvent</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.core.component</span> <span class="kn">import</span> <span class="n">Aesthetic</span><span class="p">,</span> <span class="n">Afflictions</span><span class="p">,</span> <span class="n">Identity</span><span class="p">,</span> <span class="n">Resources</span><span class="p">,</span> <span class="n">Traits</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.core.utility</span> <span class="kn">import</span> <span class="n">get_class_members</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.internal.component</span> <span class="kn">import</span> <span class="n">Aesthetic</span><span class="p">,</span> <span class="n">Afflictions</span><span class="p">,</span> <span class="n">Identity</span><span class="p">,</span> <span class="n">Resources</span><span class="p">,</span> <span class="n">Traits</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.constant</span> <span class="kn">import</span> <span class="p">(</span>
     <span class="n">ASSET_PATH</span><span class="p">,</span>
     <span class="n">GAP_SIZE</span><span class="p">,</span>
@@ -276,6 +275,7 @@
     <span class="n">SecondaryStat</span><span class="p">,</span>
     <span class="n">UIElement</span><span class="p">,</span>
 <span class="p">)</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.internal.event</span> <span class="kn">import</span> <span class="n">event_hub</span><span class="p">,</span> <span class="n">ExitMenuEvent</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.widgets.window</span> <span class="kn">import</span> <span class="n">Window</span>
 
 <span class="k">if</span> <span class="n">TYPE_CHECKING</span><span class="p">:</span>
