--- a/_modules/tests/engine/test_state.html
+++ b/_modules/tests/engine/test_state.html
@@ -316,7 +316,7 @@
     <span class="n">chronicle</span><span class="o">.</span><span class="n">set_turn_holder</span><span class="p">(</span><span class="n">player</span><span class="p">)</span>
 
     <span class="c1"># create actor near to player</span>
-    <span class="kn">from</span> <span class="nn">scripts.engine.internal.component</span> <span class="kn">import</span> <span class="n">Position</span>
+    <span class="kn">from</span> <span class="nn">scripts.engine.core.component</span> <span class="kn">import</span> <span class="n">Position</span>
     <span class="n">player_pos</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">get_entitys_component</span><span class="p">(</span><span class="n">player</span><span class="p">,</span> <span class="n">Position</span><span class="p">)</span>
     <span class="kn">from</span> <span class="nn">scripts.engine.internal</span> <span class="kn">import</span> <span class="n">library</span>
     <span class="n">actor_data</span> <span class="o">=</span> <span class="n">library</span><span class="o">.</span><span class="n">ACTORS</span><span class="p">[</span><span class="s2">"crocturion"</span><span class="p">]</span>
@@ -330,17 +330,22 @@
     <span class="n">world</span><span class="o">.</span><span class="n">create_terrain</span><span class="p">(</span><span class="n">library</span><span class="o">.</span><span class="n">TERRAIN</span><span class="p">[</span><span class="s2">"bog"</span><span class="p">],</span> <span class="p">(</span><span class="n">player_pos</span><span class="o">.</span><span class="n">x</span> <span class="o">+</span> <span class="mi">1</span><span class="p">,</span> <span class="n">player_pos</span><span class="o">.</span><span class="n">y</span><span class="p">))</span>
 
 
-<div class="viewcode-block" id="test_save_game"><a class="viewcode-back" href="../../../tests.engine.html#tests.engine.test_state.test_save_game">[docs]</a><span class="k">def</span> <span class="nf">test_save_game</span><span class="p">():</span>
+<div class="viewcode-block" id="test_save_game"><a class="viewcode-back" href="../../../tests.engine.html#tests.engine.test_state.test_save_game">[docs]</a><span class="k">def</span> <span class="nf">test_save_game</span><span class="p">(</span><span class="n">benchmark</span><span class="p">):</span>
+    <span class="n">_init_world</span><span class="p">()</span>
+    <span class="n">benchmark</span><span class="p">(</span><span class="n">state</span><span class="o">.</span><span class="n">save_game</span><span class="p">)</span></div>
+
+
+<div class="viewcode-block" id="test_dump_save_game"><a class="viewcode-back" href="../../../tests.engine.html#tests.engine.test_state.test_dump_save_game">[docs]</a><span class="k">def</span> <span class="nf">test_dump_save_game</span><span class="p">(</span><span class="n">benchmark</span><span class="p">):</span>
     <span class="n">_init_world</span><span class="p">()</span>
     <span class="n">state</span><span class="o">.</span><span class="n">save_game</span><span class="p">()</span>
-    <span class="n">state</span><span class="o">.</span><span class="n">dump_save_game</span><span class="p">()</span></div>
+    <span class="n">benchmark</span><span class="p">(</span><span class="n">state</span><span class="o">.</span><span class="n">dump_save_game</span><span class="p">)</span></div>
 
 
-<div class="viewcode-block" id="test_load_game"><a class="viewcode-back" href="../../../tests.engine.html#tests.engine.test_state.test_load_game">[docs]</a><span class="k">def</span> <span class="nf">test_load_game</span><span class="p">():</span>
+<div class="viewcode-block" id="test_load_game"><a class="viewcode-back" href="../../../tests.engine.html#tests.engine.test_state.test_load_game">[docs]</a><span class="k">def</span> <span class="nf">test_load_game</span><span class="p">(</span><span class="n">benchmark</span><span class="p">):</span>
     <span class="n">full_save_path</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="n">SAVE_PATH</span><span class="p">)</span>
     <span class="k">for</span> <span class="n">save_name</span> <span class="ow">in</span> <span class="n">os</span><span class="o">.</span><span class="n">listdir</span><span class="p">(</span><span class="n">full_save_path</span><span class="p">):</span>
         <span class="n">save</span> <span class="o">=</span> <span class="n">save_name</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s2">".json"</span><span class="p">,</span> <span class="s2">""</span><span class="p">)</span>
-        <span class="n">state</span><span class="o">.</span><span class="n">load_game</span><span class="p">(</span><span class="n">save</span><span class="p">)</span>
+        <span class="n">benchmark</span><span class="p">(</span><span class="n">state</span><span class="o">.</span><span class="n">load_game</span><span class="p">,</span> <span class="n">save</span><span class="p">)</span>
         <span class="k">break</span></div>
 
 
