--- a/_modules/scripts/engine/core/effect.html
+++ b/_modules/scripts/engine/core/effect.html
@@ -273,7 +273,7 @@
     <span class="n">Resources</span><span class="p">,</span>
 <span class="p">)</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal</span> <span class="kn">import</span> <span class="n">library</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.internal.constant</span> <span class="kn">import</span> <span class="n">DamageTypeType</span><span class="p">,</span> <span class="n">Direction</span><span class="p">,</span> <span class="n">DirectionType</span><span class="p">,</span> <span class="n">PrimaryStatType</span><span class="p">,</span> <span class="n">TargetTag</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.internal.constant</span> <span class="kn">import</span> <span class="n">DamageTypeType</span><span class="p">,</span> <span class="n">Direction</span><span class="p">,</span> <span class="n">DirectionType</span><span class="p">,</span> <span class="n">PrimaryStatType</span><span class="p">,</span> <span class="n">TileTag</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.event</span> <span class="kn">import</span> <span class="p">(</span>
     <span class="n">AffectCooldownEvent</span><span class="p">,</span>
     <span class="n">AffectStatEvent</span><span class="p">,</span>
@@ -487,7 +487,7 @@
             <span class="c1"># check a tile was returned</span>
             <span class="n">is_tile_blocking_movement</span> <span class="o">=</span> <span class="kc">False</span>
             <span class="k">if</span> <span class="n">target_tile</span><span class="p">:</span>
-                <span class="n">is_tile_blocking_movement</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">tile_has_tag</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">target_tile</span><span class="p">,</span> <span class="n">TargetTag</span><span class="o">.</span><span class="n">BLOCKED_MOVEMENT</span><span class="p">)</span>
+                <span class="n">is_tile_blocking_movement</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">tile_has_tag</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">target_tile</span><span class="p">,</span> <span class="n">TileTag</span><span class="o">.</span><span class="n">BLOCKED_MOVEMENT</span><span class="p">)</span>
 
             <span class="c1"># check if tile is blocked</span>
             <span class="k">if</span> <span class="n">is_tile_blocking_movement</span><span class="p">:</span>
