--- a/_modules/scripts/engine/internal/constant.html
+++ b/_modules/scripts/engine/internal/constant.html
@@ -303,7 +303,7 @@
 <span class="n">PrimaryStatType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"PrimaryStatType"</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
 <span class="n">SecondaryStatType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"SecondaryStatType"</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
 <span class="n">ResourceType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"ResourceType"</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
-<span class="n">TargetTagType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"TargetTagType"</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
+<span class="n">TileTagType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"TileTagType"</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
 <span class="n">DamageTypeType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"DamageTypeType"</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
 <span class="n">HitTypeType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"HitTypeType"</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
 <span class="n">EffectTypeType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"EffectTypeType"</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
@@ -538,20 +538,20 @@
     <span class="n">ALTER_TERRAIN</span> <span class="o">=</span> <span class="n">EffectTypeType</span><span class="p">(</span><span class="s2">"alter_terrain"</span><span class="p">)</span></div>
 
 
-<div class="viewcode-block" id="TargetTag"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.constant.TargetTag">[docs]</a><span class="k">class</span> <span class="nc">TargetTag</span><span class="p">(</span><span class="n">SimpleNamespace</span><span class="p">):</span>
+<div class="viewcode-block" id="TileTag"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.constant.TileTag">[docs]</a><span class="k">class</span> <span class="nc">TileTag</span><span class="p">(</span><span class="n">SimpleNamespace</span><span class="p">):</span>
     <span class="sd">"""</span>
-<span class="sd">    Types of target</span>
+<span class="sd">    Tags identifying a situation on a Tile.</span>
 <span class="sd">    """</span>
 
-    <span class="n">SELF</span> <span class="o">=</span> <span class="n">TargetTagType</span><span class="p">(</span><span class="s2">"self"</span><span class="p">)</span>
-    <span class="n">OTHER_ENTITY</span> <span class="o">=</span> <span class="n">TargetTagType</span><span class="p">(</span><span class="s2">"other_entity"</span><span class="p">)</span>
-    <span class="n">NO_ENTITY</span> <span class="o">=</span> <span class="n">TargetTagType</span><span class="p">(</span><span class="s2">"no_entity"</span><span class="p">)</span>
-    <span class="n">ANY</span> <span class="o">=</span> <span class="n">TargetTagType</span><span class="p">(</span><span class="s2">"any"</span><span class="p">)</span>
-    <span class="n">OPEN_SPACE</span> <span class="o">=</span> <span class="n">TargetTagType</span><span class="p">(</span><span class="s2">"open_space"</span><span class="p">)</span>
-    <span class="n">BLOCKED_MOVEMENT</span> <span class="o">=</span> <span class="n">TargetTagType</span><span class="p">(</span><span class="s2">"blocked_movement"</span><span class="p">)</span>
-    <span class="n">IS_VISIBLE</span> <span class="o">=</span> <span class="n">TargetTagType</span><span class="p">(</span><span class="s2">"is_visible"</span><span class="p">)</span>
-    <span class="n">NO_BLOCKING_TILE</span> <span class="o">=</span> <span class="n">TargetTagType</span><span class="p">(</span><span class="s2">"no_blocking_tile"</span><span class="p">)</span>
-    <span class="n">ACTOR</span> <span class="o">=</span> <span class="n">TargetTagType</span><span class="p">(</span><span class="s2">"actor"</span><span class="p">)</span></div>
+    <span class="n">SELF</span> <span class="o">=</span> <span class="n">TileTagType</span><span class="p">(</span><span class="s2">"self"</span><span class="p">)</span>
+    <span class="n">OTHER_ENTITY</span> <span class="o">=</span> <span class="n">TileTagType</span><span class="p">(</span><span class="s2">"other_entity"</span><span class="p">)</span>
+    <span class="n">NO_ENTITY</span> <span class="o">=</span> <span class="n">TileTagType</span><span class="p">(</span><span class="s2">"no_entity"</span><span class="p">)</span>
+    <span class="n">ANY</span> <span class="o">=</span> <span class="n">TileTagType</span><span class="p">(</span><span class="s2">"any"</span><span class="p">)</span>
+    <span class="n">OPEN_SPACE</span> <span class="o">=</span> <span class="n">TileTagType</span><span class="p">(</span><span class="s2">"open_space"</span><span class="p">)</span>
+    <span class="n">BLOCKED_MOVEMENT</span> <span class="o">=</span> <span class="n">TileTagType</span><span class="p">(</span><span class="s2">"blocked_movement"</span><span class="p">)</span>
+    <span class="n">IS_VISIBLE</span> <span class="o">=</span> <span class="n">TileTagType</span><span class="p">(</span><span class="s2">"is_visible"</span><span class="p">)</span>
+    <span class="n">NO_BLOCKING_TILE</span> <span class="o">=</span> <span class="n">TileTagType</span><span class="p">(</span><span class="s2">"no_blocking_tile"</span><span class="p">)</span>
+    <span class="n">ACTOR</span> <span class="o">=</span> <span class="n">TileTagType</span><span class="p">(</span><span class="s2">"actor"</span><span class="p">)</span></div>
 
 
 <div class="viewcode-block" id="DamageType"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.constant.DamageType">[docs]</a><span class="k">class</span> <span class="nc">DamageType</span><span class="p">(</span><span class="n">SimpleNamespace</span><span class="p">):</span>
@@ -602,7 +602,8 @@
 <span class="sd">    """</span>
 
     <span class="n">AUTO</span> <span class="o">=</span> <span class="n">TargetingMethodType</span><span class="p">(</span><span class="s2">"auto"</span><span class="p">)</span>
-    <span class="n">TARGET</span> <span class="o">=</span> <span class="n">TargetingMethodType</span><span class="p">(</span><span class="s2">"target"</span><span class="p">)</span></div>
+    <span class="n">TILE</span> <span class="o">=</span> <span class="n">TargetingMethodType</span><span class="p">(</span><span class="s2">"tile"</span><span class="p">)</span>
+    <span class="n">DIRECTION</span> <span class="o">=</span> <span class="n">TargetingMethodType</span><span class="p">(</span><span class="s2">"direction"</span><span class="p">)</span></div>
 
 
 <div class="viewcode-block" id="Shape"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.constant.Shape">[docs]</a><span class="k">class</span> <span class="nc">Shape</span><span class="p">(</span><span class="n">SimpleNamespace</span><span class="p">):</span>
