--- a/_modules/scripts/engine/internal/definition.html
+++ b/_modules/scripts/engine/internal/definition.html
@@ -284,8 +284,8 @@
     <span class="n">ShapeType</span><span class="p">,</span>
     <span class="n">TargetingMethod</span><span class="p">,</span>
     <span class="n">TargetingMethodType</span><span class="p">,</span>
-    <span class="n">TargetTagType</span><span class="p">,</span>
     <span class="n">TerrainCollisionType</span><span class="p">,</span>
+    <span class="n">TileTagType</span><span class="p">,</span>
     <span class="n">TraitGroup</span><span class="p">,</span>
     <span class="n">TraitGroupType</span><span class="p">,</span>
     <span class="n">TravelMethod</span><span class="p">,</span>
@@ -459,11 +459,9 @@
 
     <span class="n">skill_name</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">"none"</span>
     <span class="n">skill_instance</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">Skill</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
-    <span class="n">name</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">"none"</span>
-    <span class="n">description</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">"none"</span>
 
     <span class="c1"># who are we targeting?</span>
-    <span class="n">target_tags</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">TargetTagType</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
+    <span class="n">target_tags</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">TileTagType</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
 
     <span class="c1"># where are we going?</span>
     <span class="n">direction</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">DirectionType</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
@@ -479,6 +477,29 @@
     <span class="c1"># how does it interact?</span>
     <span class="n">terrain_collision</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">TerrainCollisionType</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="n">expiry_type</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">ProjectileExpiryType</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
+
+    <span class="k">def</span> <span class="nf">__post_init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="c1"># map external str to internal int</span>
+        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">speed</span><span class="p">,</span> <span class="nb">str</span><span class="p">):</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">speed</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">ProjectileSpeed</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">speed</span><span class="o">.</span><span class="n">upper</span><span class="p">())</span></div>
+
+
+<div class="viewcode-block" id="DelayedSkillData"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.definition.DelayedSkillData">[docs]</a><span class="nd">@register_dataclass_with_json</span>
+<span class="nd">@dataclass</span>
+<span class="k">class</span> <span class="nc">DelayedSkillData</span><span class="p">:</span>
+    <span class="sd">"""</span>
+<span class="sd">    Data class for a Delayed Skill</span>
+<span class="sd">    """</span>
+
+    <span class="c1"># this will be overwritten or will break, but need defaults to allow passing</span>
+    <span class="n">creator</span><span class="p">:</span> <span class="n">EntityID</span> <span class="o">=</span> <span class="mi">0</span>  <span class="c1"># type: ignore</span>
+
+    <span class="n">skill_name</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">"none"</span>
+    <span class="n">skill_instance</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">Skill</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
+
+    <span class="n">speed</span><span class="p">:</span> <span class="n">ProjectileSpeedType</span> <span class="o">=</span> <span class="n">ProjectileSpeed</span><span class="o">.</span><span class="n">SLOW</span>
+    <span class="n">duration</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span>
+    <span class="n">sprite_paths</span><span class="p">:</span> <span class="n">TraitSpritePathsData</span> <span class="o">=</span> <span class="n">TraitSpritePathsData</span><span class="p">(</span><span class="n">idle</span><span class="o">=</span><span class="s2">"skills/delayed_skill.png"</span><span class="p">)</span>
 
     <span class="k">def</span> <span class="nf">__post_init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="c1"># map external str to internal int</span>
@@ -604,7 +625,8 @@
     <span class="n">icon_path</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">"none"</span>
 
     <span class="c1"># when do we use it?</span>
-    <span class="n">target_tags</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">TargetTagType</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
+    <span class="n">cast_tags</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">TileTagType</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
+    <span class="n">target_tags</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">TileTagType</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
 
     <span class="c1"># what does it cost?</span>
     <span class="n">resource_type</span><span class="p">:</span> <span class="n">ResourceType</span> <span class="o">=</span> <span class="n">Resource</span><span class="o">.</span><span class="n">STAMINA</span>
@@ -613,7 +635,7 @@
     <span class="n">cooldown</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span>
 
     <span class="c1"># how does it travel from the user?</span>
-    <span class="n">targeting_method</span><span class="p">:</span> <span class="n">TargetingMethodType</span> <span class="o">=</span> <span class="n">TargetingMethod</span><span class="o">.</span><span class="n">TARGET</span>
+    <span class="n">targeting_method</span><span class="p">:</span> <span class="n">TargetingMethodType</span> <span class="o">=</span> <span class="n">TargetingMethod</span><span class="o">.</span><span class="n">TILE</span>
     <span class="n">target_directions</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">DirectionType</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
     <span class="nb">range</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">1</span>
 
@@ -621,9 +643,11 @@
     <span class="n">shape</span><span class="p">:</span> <span class="n">ShapeType</span> <span class="o">=</span> <span class="n">Shape</span><span class="o">.</span><span class="n">TARGET</span>
     <span class="n">shape_size</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">1</span>
 
-    <span class="c1"># projectile info</span>
-    <span class="n">uses_projectile</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span>
+    <span class="c1"># delivery method</span>
+    <span class="n">uses_projectile</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span>
     <span class="n">projectile_data</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">ProjectileData</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
+    <span class="n">is_delayed</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span>
+    <span class="n">delayed_skill_data</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">DelayedSkillData</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
 
     <span class="k">def</span> <span class="nf">__post_init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="c1"># convert directions to their constant values</span>
@@ -648,7 +672,7 @@
     <span class="n">category</span><span class="p">:</span> <span class="n">AfflictionCategoryType</span> <span class="o">=</span> <span class="n">AfflictionCategory</span><span class="o">.</span><span class="n">BANE</span>
     <span class="n">shape</span><span class="p">:</span> <span class="n">ShapeType</span> <span class="o">=</span> <span class="n">Shape</span><span class="o">.</span><span class="n">TARGET</span>
     <span class="n">shape_size</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">1</span>
-    <span class="n">target_tags</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">TargetTagType</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
+    <span class="n">target_tags</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">TileTagType</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
     <span class="n">identity_tags</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">EffectTypeType</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
     <span class="n">triggers</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">ReactionTriggerType</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span></div>
 
