--- a/_modules/scripts/nqp/actions/behaviour.html
+++ b/_modules/scripts/nqp/actions/behaviour.html
@@ -262,7 +262,7 @@
 <span class="kn">from</span> <span class="nn">scripts.engine.core.component</span> <span class="kn">import</span> <span class="n">Knowledge</span><span class="p">,</span> <span class="n">Position</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal</span> <span class="kn">import</span> <span class="n">library</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.action</span> <span class="kn">import</span> <span class="n">Behaviour</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.internal.constant</span> <span class="kn">import</span> <span class="n">Direction</span><span class="p">,</span> <span class="n">TargetTag</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.internal.constant</span> <span class="kn">import</span> <span class="n">Direction</span><span class="p">,</span> <span class="n">TileTag</span>
 
 
 <div class="viewcode-block" id="SkipTurn"><a class="viewcode-back" href="../../../../scripts.nqp.actions.html#scripts.nqp.actions.behaviour.SkipTurn">[docs]</a><span class="k">class</span> <span class="nc">SkipTurn</span><span class="p">(</span><span class="n">Behaviour</span><span class="p">):</span>
@@ -415,7 +415,7 @@
             <span class="n">y</span> <span class="o">=</span> <span class="n">pos</span><span class="o">.</span><span class="n">y</span> <span class="o">+</span> <span class="n">_dir</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span>
 
             <span class="n">tile</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">get_tile</span><span class="p">((</span><span class="n">x</span><span class="p">,</span> <span class="n">y</span><span class="p">))</span>
-            <span class="n">has_tags</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">tile_has_tag</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">tile</span><span class="p">,</span> <span class="n">TargetTag</span><span class="o">.</span><span class="n">OPEN_SPACE</span><span class="p">)</span>
+            <span class="n">has_tags</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">tile_has_tag</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">tile</span><span class="p">,</span> <span class="n">TileTag</span><span class="o">.</span><span class="n">OPEN_SPACE</span><span class="p">)</span>
             <span class="k">if</span> <span class="n">has_tags</span><span class="p">:</span>
                 <span class="n">poss_directions</span><span class="o">.</span><span class="n">append</span><span class="p">((</span><span class="n">_dir</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="n">_dir</span><span class="p">[</span><span class="mi">1</span><span class="p">]))</span>
 
