--- a/_modules/scripts/nqp/actions/skill.html
+++ b/_modules/scripts/nqp/actions/skill.html
@@ -525,6 +525,27 @@
         <span class="p">)</span>
 
         <span class="k">return</span> <span class="p">[</span><span class="n">damage_effect</span><span class="p">]</span></div></div>
+
+
+<div class="viewcode-block" id="Lightning"><a class="viewcode-back" href="../../../../scripts.nqp.actions.html#scripts.nqp.actions.skill.Lightning">[docs]</a><span class="k">class</span> <span class="nc">Lightning</span><span class="p">(</span><span class="n">Skill</span><span class="p">):</span>
+    <span class="sd">"""</span>
+<span class="sd">    Test the Delayed Skill functionality.</span>
+<span class="sd">    """</span>
+
+<div class="viewcode-block" id="Lightning._build_effects"><a class="viewcode-back" href="../../../../nqp/actions/skill.html#scripts.nqp.actions.skill.Lightning._build_effects">[docs]</a>    <span class="k">def</span> <span class="nf">_build_effects</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">potency</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">1.0</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">List</span><span class="p">[</span><span class="n">DamageEffect</span><span class="p">]:</span>  <span class="c1"># type:ignore</span>
+        <span class="n">damage_effect</span> <span class="o">=</span> <span class="n">DamageEffect</span><span class="p">(</span>
+            <span class="n">origin</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">user</span><span class="p">,</span>
+            <span class="n">success_effects</span><span class="o">=</span><span class="p">[],</span>
+            <span class="n">failure_effects</span><span class="o">=</span><span class="p">[],</span>
+            <span class="n">target</span><span class="o">=</span><span class="n">entity</span><span class="p">,</span>
+            <span class="n">stat_to_target</span><span class="o">=</span><span class="n">PrimaryStat</span><span class="o">.</span><span class="n">VIGOUR</span><span class="p">,</span>
+            <span class="n">accuracy</span><span class="o">=</span><span class="n">library</span><span class="o">.</span><span class="n">GAME_CONFIG</span><span class="o">.</span><span class="n">base_values</span><span class="o">.</span><span class="n">accuracy</span> <span class="o">+</span> <span class="mi">20</span><span class="p">,</span>
+            <span class="n">damage</span><span class="o">=</span><span class="nb">int</span><span class="p">(</span><span class="n">library</span><span class="o">.</span><span class="n">GAME_CONFIG</span><span class="o">.</span><span class="n">base_values</span><span class="o">.</span><span class="n">damage</span> <span class="o">*</span> <span class="n">potency</span><span class="p">),</span>
+            <span class="n">damage_type</span><span class="o">=</span><span class="n">DamageType</span><span class="o">.</span><span class="n">MUNDANE</span><span class="p">,</span>
+            <span class="n">mod_stat</span><span class="o">=</span><span class="n">PrimaryStat</span><span class="o">.</span><span class="n">CLOUT</span><span class="p">,</span>
+            <span class="n">mod_amount</span><span class="o">=</span><span class="mf">0.1</span><span class="p">,</span>
+        <span class="p">)</span>
+        <span class="k">return</span> <span class="p">[</span><span class="n">damage_effect</span><span class="p">]</span></div></div>
 </pre></div>
 
           </article>
